admission/ValidatingAdmissionPolicy/policies/image-no-latest/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: image-no-latest-ephemeralcontainers
spec:
  containers:
  - name: main
    image: busybox:latest
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test image-no-latest-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/image-no-latest/ephemeralcontainers/deny-kubectl-debug-custom.yaml
